hello-world/deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: lab-registry:38701/hello-world
          #imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/example/
              name: hello-world
      volumes:
        - name: hello-world
          configMap:
            name: hello-world
            items:
              - key: example.html
                path: example.html
